Fixes responses controllers and swagger: avatars, current, refresh
